<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_90"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Standard_Rolls">

    <Button
        android:id="@+id/dice"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/standard_dice_d6"
        app:layout_constraintBottom_toTopOf="@+id/coin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1"/>

    <Button
        android:id="@+id/coin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/coin_toss_d2"
        app:layout_constraintBottom_toTopOf="@+id/d4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice"
        app:layout_constraintVertical_weight="1"/>

    <Button
        android:id="@+id/d4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/d4"
        app:layout_constraintBottom_toTopOf="@+id/d10"
        app:layout_constraintEnd_toStartOf="@+id/d8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coin"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/d8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/d8"
        app:layout_constraintBottom_toBottomOf="@+id/d4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/d4"
        app:layout_constraintTop_toTopOf="@+id/d4" />

    <Button
        android:id="@+id/d10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/d10"
        app:layout_constraintBottom_toTopOf="@+id/d20"
        app:layout_constraintEnd_toStartOf="@+id/d12"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/d4"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/d12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/d12"
        app:layout_constraintBottom_toBottomOf="@+id/d10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/d10"
        app:layout_constraintTop_toTopOf="@+id/d10" />

    <Button
        android:id="@+id/d20"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/d20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/d100"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/d10"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/d100"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/d100"
        app:layout_constraintBottom_toBottomOf="@+id/d20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/d20"
        app:layout_constraintTop_toTopOf="@+id/d20" />
</androidx.constraintlayout.widget.ConstraintLayout>